ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.provider: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: my-app
  name: my-app
  namespace: test
spec:
  rules:
  - host: test.alexmaron.xyz
    http:
      paths:
      - backend:
          service:
            name: my-app
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - test.alexmaron.xyz
    secretName: gitlab-tls
